--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,68 @@
-.App {
-  text-align: center;
+body {
+  background: #efefef;
+}
+
+.Stories {
+  max-width: 800px;
+  background: white;
+  margin-top: 35px;
+  padding: 3px 0;
+  margin-left: 103px;
+}
+
+.Story {
+  padding: 10px;
+}
+
+.Story a {
+  font-weight: 900;
+  color: #333;
+  text-decoration: none;
+}
+
+.Story a small {
+  font-weight: normal;
+  font-size: 12px;
+  color: #999;
+}
+
+.Story__details {
+  font-size: 12px;
+  color: #999;
+  margin-top: 2px;
+}
+
+.Brand {
+  padding: 10px;
+  color: white;
+  font-weight: 900;
+  background-color: #FF6600;
+}
+
+.Nav {
+  font-size: 14px;
+  border-bottom: 1px solid #efefef;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  flex-direction: row;
+  background-color: white;
+}
+
+.NavItem {
+  display: flex;
+  padding: 10px;
+}
+
+.NavItem:hover {
+  cursor: pointer;
+}
+
+.NavItem--selected {
+  color: #FF6600;
+  font-weight: bold;
 }
 
 .App-logo {
